<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView 
        android:id="@+id/imageView1"
        android:contentDescription="@string/imgicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/lbname"/>
    <EditText 
        android:id="@+id/txtNome" 
        android:inputType="text"
        android:layout_height="wrap_content"
       	android:layout_width="match_parent"/>
    
    <TextView 
        android:layout_height="wrap_content"
       	android:layout_width="wrap_content"
       	android:text="@string/lbemail"/>
    <EditText 
        android:id="@+id/txtEmail" 
       	android:inputType="textEmailAddress"
       	android:layout_height="wrap_content"
      		android:layout_width="match_parent"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="editar"
        android:text="@string/lbedit" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="apagar"
        android:text="@string/lbdel" />

</LinearLayout>